# dddmr_navigation

./: .gitignore  README.md
dddmr_docker/docker_file/: Dockerfile_x64  Dockerfile_x64_cuda  Dockerfile_x64_l4t_r36
src/dddmr_beginner_guide/: CMakeLists.txt  README.md  package.xml
src/dddmr_beginner_guide/config/: airy_tilt45_mapping.yaml  airy_tilt45_navigation.yaml
src/dddmr_beginner_guide/launch/: airy_tilt45_mapping.launch  airy_tilt45_navigation.launch
src/dddmr_beginner_guide/rviz/: airy_tilt45_mapping.rviz
src/dddmr_beginner_guide/translations/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.tr.md  README.vi.md  README.zh-hans.md  README.zh-hant.md
src/dddmr_explore_and_search/: CMakeLists.txt  README.md  package.xml
src/dddmr_explore_and_search/config/: dddmr_explore_and_search.yaml
src/dddmr_explore_and_search/include/dddmr_explore_and_search/: camera_frustum.hpp  dddmr_explore_and_search.hpp
src/dddmr_explore_and_search/launch/: dddmr_explore_and_search.launch
src/dddmr_explore_and_search/rviz/: dddmr_explore_and_search.rviz
src/dddmr_explore_and_search/src/: camera_frustum.cpp  dddmr_explore_and_search.cpp  main.cpp
src/dddmr_global_planner/config/: path_planning_on_2d_static_layer.yaml  path_planning_on_static_layer.yaml
src/dddmr_global_planner/include/global_planner/: global_planner.h
src/dddmr_global_planner/launch/: path_planning_on_2d_static_layer.launch
src/dddmr_global_planner/rviz/: path_planning_on_2d_static_layer.rviz
src/dddmr_global_planner/src/: a_star_on_pc.cpp  a_star_on_pre_graph.cpp  dynamic_window_aware_global_planner.cpp  global_planner.cpp
src/dddmr_global_planner/utils/: occupancy2ground.cpp
src/dddmr_lego_loam/lego_loam_bor/: CMakeLists.txt  package.xml
src/dddmr_lego_loam/lego_loam_bor/config/: loam_bag_airy_config.yaml  loam_bag_c16_config.yaml  loam_bag_go2_config.yaml  loam_bag_lidar2depthimg_config.yaml  loam_bag_mid360_config.yaml  loam_bag_yolo_config.yaml  loam_c16_config.yaml  mcl_c16_config.yaml
src/dddmr_lego_loam/lego_loam_bor/engine/: onnx2trt.bash
src/dddmr_lego_loam/lego_loam_bor/include/: featureAssociation.h  imageProjection.h  lego_loam_map_visualization.hpp  mapOptimization.h  utility.h  yolo_ros2_image_sub.h
src/dddmr_lego_loam/lego_loam_bor/launch/: lego_loam_bag_lidar2depthimg.launch  lego_loam_bag_mid360.launch  lego_loam_bag_yolo.launch  mcl_feature.launch  optimized-icp_gn_playground_key2key.launch  optimized-icp_gn_playground_key2target.launch
src/dddmr_lego_loam/lego_loam_bor/rviz/: lego_loam_airy.rviz  lego_loam_yolo.rviz  optimized_icp_gn_playground_key2key.rviz  optimized_icp_gn_playground_key2target.rviz
src/dddmr_lego_loam/lego_loam_bor/src/: featureAssociation.cpp  imageProjection.cpp  lego_loam_bag_node.cpp  lego_loam_node.cpp  mapOptimization.cpp
src/dddmr_local_planner/local_planner/src/: local_planner.cpp
src/dddmr_local_planner/mpc_critics/: CMakeLists.txt
src/dddmr_local_planner/mpc_critics/src/: stacked_scoring_model.cpp
src/dddmr_local_planner/recovery_behaviors/: CMakeLists.txt  recovery_behaviors.xml
src/dddmr_local_planner/trajectory_generators/: CMakeLists.txt  trajectory_generators.xml
src/dddmr_mcl_3dl/: CMakeLists.txt  package.xml
src/dddmr_mcl_3dl/config/: mcl_3dl.yaml
src/dddmr_mcl_3dl/include/: mcl_3dl.h
src/dddmr_mcl_3dl/launch/: mcl_3dl.launch  mcl_3dlXfeatureXbag.launch
src/dddmr_mcl_3dl/map/: map.pcd  poses.pcd
src/dddmr_mcl_3dl/rviz/: mcl_3dl_demo.rviz
src/dddmr_mcl_3dl/src/: lidar_measurement_model_likelihood.cpp  mcl_3dl.cpp  parameters.cpp  sub_maps.cpp
src/dddmr_odom_3d/MD/: README_CORE_CONCEPT.md
src/dddmr_odom_3d/src/: odom_3d.cpp
src/dddmr_p2p_move_base/: CMakeLists.txt  README.md
src/dddmr_p2p_move_base/config/: go2_localization.yaml  go2_mapping.yaml  p2p_move_base_localization.yaml  p2p_move_base_mapping.yaml  p2p_wo_mcl.yaml  zinger_localization.yaml
src/dddmr_p2p_move_base/kinematics_md/: OMNIDIRECTION.md
src/dddmr_p2p_move_base/launch/: go2_localization.launch  p2p_move_base_localization.launch  p2p_move_base_localization_launch.py  zinger_localization.launch
src/dddmr_p2p_move_base/rviz/: p2p_move_base_localization.rviz  zinger_localization.rviz
src/dddmr_p2p_move_base/simulation/: zinger_bring_up.bash
src/dddmr_p2p_move_base/src/: p2p_global_plan_manager.cpp  p2p_move_base.cpp  p2p_state.cpp
src/dddmr_perception_3d/: CMakeLists.txt
src/dddmr_perception_3d/plugins/: multilayer_spinning_lidar.cpp  static_layer.cpp
src/dddmr_perception_3d/rviz/: semantic_segmentation_depth_camera_3d.rviz
src/dddmr_pg_map_server/: CMakeLists.txt  README.md  package.xml
src/dddmr_pg_map_server/config/: dddmr_pg_map_server.yaml
src/dddmr_pg_map_server/include/: dddmr_pg_map_server.h  utilities.h
src/dddmr_pg_map_server/launch/: dddmr_pg_map_server.launch
src/dddmr_pg_map_server/rviz/: dddmr_pg_map_server.rviz
src/dddmr_pg_map_server/src/: dddmr_pg_map_server.cpp  dddmr_pg_map_server_node.cpp
src/dddmr_rviz_tools/map_delete_panel/: CMakeLists.txt
src/dddmr_rviz_tools/map_editor_panel/: CMakeLists.txt
src/dddmr_rviz_tools/mapping_panel/: CMakeLists.txt
src/dddmr_rviz_tools/pose_graph_editor_panel/: CMakeLists.txt
src/dddmr_rviz_tools/pose_graph_merge_editor_panel/: CMakeLists.txt
src/dddmr_semantic_segmentation/: README.md  download_files.bash
src/dddmr_semantic_segmentation/include/: semantic_segmentation2point_cloud.h
src/dddmr_semantic_segmentation/launch/: bag_exclude_ss_trt_launch.py  bag_semantic_segmentaton_trt_launch.py
src/dddmr_semantic_segmentation/scripts/: ddrnet_ros_img_sub.py
src/dddmr_semantic_segmentation/src/: semantic_segmentation2point_cloud.cpp
src/dddmr_sys_core/: CMakeLists.txt
src/dddmr_sys_core/action/: RecoveryBehaviors.action
src/dddmr_sys_core/include/dddmr_sys_core/: dddmr_enum_states.h
src/dddmr_sys_core/srv/: GetKeyFrameCloud.srv
src/dddmr_trt/: CMakeLists.txt  README.md  package.xml
src/dddmr_trt/src/yolo/yolo_trt/: yolov8.cpp
(+52 files in other folders)
